<resources>
	<string name="app_name">Tally</string>
	<string name="action_settings">Settings</string>

	<string name="label_billSK_one">1</string>
	<string name="label_billSK_two">2</string>
	<string name="label_billSK_three">3</string>
	<string name="label_billSK_four">4</string>
	<string name="label_billSK_five">5</string>
	<string name="label_billSK_six">6</string>
	<string name="label_billSK_seven">7</string>
	<string name="label_billSK_eight">8</string>
	<string name="label_billSK_nine">9</string>
	<string name="label_billSK_zero">0</string>
	<string name="label_billSK_dot">.</string>
	<string name="label_billSK_backspace">DEL</string>
	<string name="label_billSK_add">+</string>
	<string name="label_billSK_ok">OK</string>
	<string name="label_billSK_equal">=</string>

	<string name="pay_type_1">支付宝</string>
	<string name="pay_type_2">微信</string>
	<string name="pay_type_3">现金</string>

	<string name="type_1">一般</string>
	<string name="type_2">餐饮</string>
	<string name="type_3">娱乐</string>
	<string name="type_4">水果零食</string>
	<string name="type_5">购物</string>
	<string name="type_6">个人</string>
	<string name="type_7">娱乐</string>
	<string name="type_8">电影</string>
	<string name="type_9">社交</string>
	<string name="type_10">交通</string>
	<string name="type_11">红包</string>
	<string name="type_12">虚拟物品</string>
</resources>
