<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="210dp"
		android:orientation="horizontal">

		<LinearLayout
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:orientation="vertical">

			<View style="@style/Widget_MoneySK_Line"/>

			<TextView
				android:id="@+id/billSK_one"
				style="@style/Widget_SKItem"
				android:text="@string/label_billSK_one"/>

			<View style="@style/Widget_MoneySK_Line"/>

			<TextView
				android:id="@+id/billSK_four"
				style="@style/Widget_SKItem"
				android:text="@string/label_billSK_four"/>

			<View style="@style/Widget_MoneySK_Line"/>

			<TextView
				android:id="@+id/billSK_seven"
				style="@style/Widget_SKItem"
				android:text="@string/label_billSK_seven"/>

			<View style="@style/Widget_MoneySK_Line"/>

			<TextView
				android:id="@+id/billSK_zero"
				style="@style/Widget_SKItem"
				android:text="@string/label_billSK_zero"/>

		</LinearLayout>

		<View style="@style/Widget_MoneySK_VLine"/>

		<LinearLayout
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:orientation="vertical">

			<View style="@style/Widget_MoneySK_Line"/>

			<TextView
				android:id="@+id/billSK_two"
				style="@style/Widget_SKItem"
				android:text="@string/label_billSK_two"/>

			<View style="@style/Widget_MoneySK_Line"/>

			<TextView
				android:id="@+id/billSK_five"
				style="@style/Widget_SKItem"
				android:text="@string/label_billSK_five"/>

			<View style="@style/Widget_MoneySK_Line"/>

			<TextView
				android:id="@+id/billSK_eight"
				style="@style/Widget_SKItem"
				android:text="@string/label_billSK_eight"/>

			<View style="@style/Widget_MoneySK_Line"/>

			<TextView
				android:id="@+id/billSK_dot"
				style="@style/Widget_SKItem"
				android:text="@string/label_billSK_dot"/>
		</LinearLayout>

		<View style="@style/Widget_MoneySK_VLine"/>

		<LinearLayout
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:orientation="vertical">

			<View style="@style/Widget_MoneySK_Line"/>

			<TextView
				android:id="@+id/billSK_three"
				style="@style/Widget_SKItem"
				android:text="@string/label_billSK_three"/>

			<View style="@style/Widget_MoneySK_Line"/>

			<TextView
				android:id="@+id/billSK_six"
				style="@style/Widget_SKItem"
				android:text="@string/label_billSK_six"/>

			<View style="@style/Widget_MoneySK_Line"/>

			<TextView
				android:id="@+id/billSK_nine"
				style="@style/Widget_SKItem"
				android:text="@string/label_billSK_nine"/>

			<View style="@style/Widget_MoneySK_Line"/>

			<LinearLayout
				android:id="@+id/billSK_currencyWrapper"
				style="@style/Widget_SKItem"
				android:orientation="vertical">

				<TextView
					android:id="@+id/billSK_currency"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"/>

				<TextView
					android:id="@+id/billSK_currencyName"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"/>

			</LinearLayout>

		</LinearLayout>

		<View style="@style/Widget_MoneySK_VLine"/>

		<LinearLayout
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:orientation="vertical">

			<View style="@style/Widget_MoneySK_Line"/>

			<TextView
				android:id="@+id/billSK_backspace"
				style="@style/Widget_SKItem"
				android:text="@string/label_billSK_backspace"/>

			<View style="@style/Widget_MoneySK_Line"/>

			<TextView
				android:id="@+id/billSK_add"
				style="@style/Widget_SKItem"
				android:text="@string/label_billSK_add"/>

			<View style="@style/Widget_MoneySK_Line"/>

			<TextView
				android:id="@+id/billSK_ok"
				style="@style/Widget_SKItem"
				android:layout_weight="2"
				android:text="@string/label_billSK_ok"/>

			<TextView
				android:id="@+id/billSK_equal"
				style="@style/Widget_SKItem"
				android:layout_weight="2"
				android:text="@string/label_billSK_equal"
				android:visibility="gone"/>
		</LinearLayout>
	</LinearLayout>
</merge>