<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  android:orientation="vertical"
			  android:layout_width="match_parent"
			  android:layout_height="wrap_content"
			  android:background="@color/color_yellow"
			  android:layout_below="@+id/ll_top">
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:layout_marginBottom="20dp">
		<LinearLayout
			android:id="@+id/ll_type1"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:gravity="center"
			android:orientation="vertical">
			<ImageView
				android:id="@+id/iv_type1"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:src="@drawable/type_1"/>
			<TextView
				android:id="@+id/tv_type1"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/type_1"
				android:layout_marginTop="10dp"
				android:textColor="@drawable/type_text"/>
		</LinearLayout>
		<LinearLayout
			android:id="@+id/ll_type2"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:gravity="center"
			android:orientation="vertical">
			<ImageView
				android:id="@+id/iv_type2"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:src="@drawable/type_2"/>
			<TextView
				android:id="@+id/tv_type2"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/type_2"
				android:layout_marginTop="10dp"
				android:textColor="@drawable/type_text"/>
		</LinearLayout>
		<LinearLayout
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:gravity="center"
			android:orientation="vertical"
			android:id="@+id/ll_type3">
			<ImageView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:src="@drawable/type_3"
				android:id="@+id/iv_type3"/>
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/type_3"
				android:layout_marginTop="10dp"
				android:textColor="@drawable/type_text"
				android:id="@+id/tv_type3"/>
		</LinearLayout>
		<LinearLayout
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:gravity="center"
			android:orientation="vertical"
			android:id="@+id/ll_type4">
			<ImageView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:src="@drawable/type_4"
				android:id="@+id/iv_type4"/>
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/type_6"
				android:layout_marginTop="10dp"
				android:textColor="@drawable/type_text"
				android:id="@+id/tv_type4"/>
		</LinearLayout>
		<LinearLayout
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:gravity="center"
			android:orientation="vertical"
			android:id="@+id/ll_type5">
			<ImageView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:src="@drawable/type_5"
				android:id="@+id/iv_type5"/>
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/type_4"
				android:layout_marginTop="10dp"
				android:textColor="@drawable/type_text"
				android:id="@+id/tv_type5"/>
		</LinearLayout>

	</LinearLayout>
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		>
		<LinearLayout
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:gravity="center"
			android:orientation="vertical"
			android:id="@+id/ll_type6">
			<ImageView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:src="@drawable/type_6"
				android:id="@+id/iv_type6"/>
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/type_10"
				android:layout_marginTop="10dp"
				android:textColor="@drawable/type_text"
				android:id="@+id/tv_type6"/>
		</LinearLayout>
		<LinearLayout
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:gravity="center"
			android:orientation="vertical"
			android:id="@+id/ll_type7">
			<ImageView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:src="@drawable/type_7"
				android:id="@+id/iv_type7"/>
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/type_9"
				android:layout_marginTop="10dp"
				android:textColor="@drawable/type_text"
				android:id="@+id/tv_type7"/>
		</LinearLayout>
		<LinearLayout
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:gravity="center"
			android:orientation="vertical"
			android:id="@+id/ll_type8">
			<ImageView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:src="@drawable/type_8"
				android:id="@+id/iv_type8"/>
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/type_11"
				android:layout_marginTop="10dp"
				android:textColor="@drawable/type_text"
				android:id="@+id/tv_type8"/>
		</LinearLayout>
		<LinearLayout
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:gravity="center"
			android:orientation="vertical"
			android:id="@+id/ll_type9">
			<ImageView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:src="@drawable/type_9"
				android:id="@+id/iv_type9"/>
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/type_8"
				android:layout_marginTop="10dp"
				android:textColor="@drawable/type_text"
				android:id="@+id/tv_typ9"/>
		</LinearLayout>
		<LinearLayout
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:gravity="center"
			android:orientation="vertical"
			android:id="@+id/ll_type10">
			<ImageView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:src="@drawable/type_11"/>
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/type_12"
				android:layout_marginTop="10dp"
				android:textColor="@drawable/type_text"/>
		</LinearLayout>

	</LinearLayout>
</LinearLayout>